# jarvis

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
.cursor/rules/: language-conventions.mdc  python-methods.mdc  uv.mdc
agents/: assistant.py  factory.py  jarvis_basic_agent.py  jarvis_mcp_memory_agent.py  jarvis_memory_agent.py  session.py
agents/agent_models/: huggingface_chat_model.py
api/: dependencies.py  deployment.py  main.py  main_api.py
api/google_api/: jarvis_google_authentication.py
api/routers/: __init__.py  admin.py  auth.py  chat.py  webhooks.py
api/schemas/: __init__.py  auth.py  chat.py
api/security/: __init__.py
api/services/: __init__.py  admin_service.py  auth_service.py  chat_service.py
core/: __init__.py  config.py  logging_config.py  paths.py
core/enums/: __init__.py  core_enums.py
data/: users.db
database/users/: example_users_info.csv  (+2 more)
db/: users_db.py
demos/: basic_mcp_test.py  chatbot_with_tools.py  chatbot_with_tools_and_memory.py  generate_crypt_key.ipynb  google_api_demo.ipynb  graphrag_demo.ipynb  graphrag_langgraph_demo.ipynb  graphrag_microsoft_demo.ipynb  microsoft_graphrag_demo.ipynb  users_db_playground.ipynb
docs/: REFACTOR_PLAN.md
enums/: core_enums.py
examples/: README.md  basic_mcp_test.py  chatbot_with_tools.py  chatbot_with_tools_and_memory.py  google_api_demo.ipynb
interfaces/: __init__.py  cli.py  gradio_app.py
mcp/: server_config.json
tests/: conftest.py  test_api_dependencies.py  test_api_routers.py  test_api_routes.py  test_api_services.py  test_chat_service_permissions.py  test_core_imports.py  test_core_shims.py  test_deployment_env.py  test_domain_chat_state.py  test_domain_users.py  test_import_layers.py  test_paths.py  test_smoke_imports.py
tools/: calc.py  date_time.py  google_calendar.py  speech_to_text.py  tools_registry.py
utils/: security.py
(+50 files in other folders)
