[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "Personal AI assistant with LangGraph and LangChain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # runtime deps: see requirements.txt

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "database*", "enums*", "tools*", "utils*", "mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
